// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/OpenWith/OpenWith render() should render the Open With button 1`] = `
<Internationalize>
  <div
    className="be bcow"
    id="bcow_9"
  >
    <OpenWithButton
      displayIntegration="Adobe"
      error={null}
      numIntegrations={1}
      onClick={[Function]}
    />
  </div>
</Internationalize>
`;

exports[`components/OpenWith/OpenWith render() should render the loading button when loading 1`] = `
<Internationalize>
  <div
    className="be bcow"
    id="bcow_8"
  >
    <LoadingOpenWithButton />
  </div>
</Internationalize>
`;
